--- a/activities.html
+++ b/activities.html
@@ -11,7 +11,7 @@
 <header><h1>The Yurts Pacific Trails</h1></header>
 <nav>
   <ul>
-     <li><a href="Index.html">Home</a></li>
+     <li><a href="index.html">Home</a></li>
      <li><a href="yurts.html">Yurts</a></li>
      <li><a href="activities.html">Activities</a></li>
      <li><a href="reservation.html">Reservations</a></li>
@@ -45,4 +45,5 @@ Copyright &copy; 2020 Pacific trails Resort<br>
 </div>
 </body>
 </html>
+
 
